<resources>
    <string name="app_name">Mess Manager</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_report">Report</string>
    <string name="menu_menu">My Mess Menu</string>
    <string name="menu_rating">My Mess Ratting</string>
    <string name="menu_on_leave">Student On Leave</string>
    <string name="todo">Todo</string>
    <string name="enter_web_mail_id">Enter Web Mail Id</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="resend_verification_link">Resend Verification Link</string>


    <string name="action_Logout">Logout</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="web_mail_id">Web Mail Id</string>
    <string name="send_verification_link">Send Verification Link</string>
    <string name="send_password_link">Send Password Link</string>
    <string name="dinner">Dinner :</string>
    <string name="snack">Snack :</string>
    <string name="lunch">Lunch :</string>
    <string name="breakfast">Breakfast :</string>
    <string name="week_name">Week Name</string>
    <string name="update">Update</string>
    <string name="scan">Scan</string>
    <string name="name">Name</string>
    <string name="roll_no">Roll No</string>
    <string name="mobile">Mobile</string>
    <string name="user_not_found">User Not Found</string>
    <string name="submit">Submit</string>
    <string name="over_all">Over all</string>
    <string name="food">Food</string>
    <string name="quantity">Quantity</string>
    <string name="food_on_time">Food On Time</string>
    <string name="service">Service</string>
    <string name="cleanliness">Cleanliness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to">To</string>
    <string name="mobile_no">Mobile No</string>
    <string name="total_students">Total Students :</string>
    <string name="send_link">Send Link</string>
</resources>