<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    app:cardBackgroundColor="#EAF9FF"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    android:foreground="?attr/selectableItemBackground"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewLeaveReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textViewFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewLeaveReason"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:layout_below="@id/textViewLeaveReason"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/textViewTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/textViewLeaveReason"/>

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewFrom"
            android:text="@string/name"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewFrom"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:layout_toEndOf="@id/textViewUserName"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/textViewUserRollNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewUserName"
            android:text="@string/roll_no"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/UserRollNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewUserName"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:layout_toEndOf="@id/textViewUserName"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textViewUserMobileNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewUserRollNo"
            android:text="@string/mobile_no"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/UserMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewUserRollNo"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:layout_toEndOf="@id/textViewUserName"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textViewLeaveStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/UserMobile"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>