<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="20dp"
    app:cardBackgroundColor="#C2FFD8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="Guest"
            android:textSize="50dp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Guest Id"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/GuestId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/GuestName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"

            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Generated By"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/UserRollNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_not_found"
            android:textSize="25sp"
            android:visibility="gone"
            android:layout_margin="25dp"
            android:textColor="#FF0000"
            android:gravity="center"/>

        <Button
            android:id="@+id/SubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/capsule"
            android:layout_margin="25dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/submit"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>